# heimdall

./: .gitignore  CMakeLists.txt  LICENSE
calibration/schemas/: rig.schema.json
capture/: CMakeLists.txt
capture/proto/: capture.proto
capture/src/: cuda_ipc_bridge.cu  cuda_ipc_bridge.h  frame_sync.cpp  frame_sync.h
config/ocio/: config.ocio
depth/src/: temporal_reprojection.cu  temporal_reprojection.h
encode/: CMakeLists.txt
encode/src/: gltf_writer.cpp  gltf_writer.h
fusion/: CMakeLists.txt
fusion/src/: fusion.cpp  fusion.h  point_cloud_fusion.cu  point_cloud_fusion.h  tsdf_volume.cu  tsdf_volume.h
gaussian/: CMakeLists.txt
gaussian/scripts/: evaluate.py  export_tensorrt.py  finetune.py  prepare_training_data.py
gaussian/scripts/config/: finetune_config.yaml
gaussian/src/: camera_selector.cpp  camera_selector.h  gltf_gs_writer.cpp  gltf_gs_writer.h  pipeline.h  spatial_hash.h  spz_writer.cpp  spz_writer.h  temporal_tracker.cu  temporal_tracker.h  trt_inference.cpp  trt_inference.h  trt_preprocess.cu  trt_preprocess.h
harness/scripts/: convert_legacy_calibration.py  run_harness.py
inference/pytorch/: gps_gaussian_pt.py
inference/tensorrt/: gps_gaussian_trt.h
merge/: CMakeLists.txt
merge/src/: frame_aggregator.cpp  frame_aggregator.h  gaussian_merger.cu  gaussian_merger.h  merge_pipeline.cpp  merge_pipeline.h
mesh/: CMakeLists.txt
mesh/src/: mesh_pipeline.cpp  mesh_pipeline.h  mesh_simplifier.cpp  mesh_simplifier.h  mesh_types.h  mesh_unwrapper.cpp  mesh_unwrapper.h
orchestration/docker/: Dockerfile.base
orchestration/workflows/: offline-render.yaml
scripts/: poc_gaussian_preview.py  setup_m40_poc.sh
segmentation/: CMakeLists.txt
segmentation/scripts/: export_matting_model.py
segmentation/src/: matting.cpp  matting.h  matting_preprocess.cu  matting_preprocess.h
stream/src/: gs_multiplexer.cpp  gs_multiplexer.h  manifest.json
test/: CMakeLists.txt  test_camera_selector.cpp  test_frame_sync.cpp  test_helpers.h  test_main.cpp  test_mesh_pipeline.cpp  test_mesh_types.cpp  test_multiplexer.cpp  test_visibility.cpp
texture/: CMakeLists.txt
texture/src/: texturing.cpp  texturing.h  visibility.cpp  visibility.h
transport/: CMakeLists.txt
transport/src/: camera_router.h  gpu_decoder.h  srt_transport.h
viewer/web/: index.html
viewer/web/shaders/: vdtm.glsl
viewer/web/src/: heimdall-viewer.js  splat-renderer.js  stream-client.js
worker/: CMakeLists.txt  Dockerfile
worker/proto/: worker.proto
worker/scripts/: run_worker.py
worker/src/: quantizer.cpp  quantizer.h  worker_pipeline.cpp  worker_pipeline.h
